crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@318.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: delete from lprt_a where a = 1;
---
DeleteStmt@0..31
  DeleteP@0..6 "delete"
  Whitespace@6..7 " "
  From@7..11 "from"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "lprt_a"
  Whitespace@18..19 " "
  Where@19..24 "where"
  Whitespace@24..25 " "
  AExpr@25..30
    ColumnRef@25..26
      Ident@25..26 "a"
    Whitespace@26..27 " "
    Ascii61@27..28 "="
    Whitespace@28..29 " "
    AConst@29..30
      Iconst@29..30 "1"
  Ascii59@30..31 ";"

