crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@32.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table rlp_default_null partition of rlp_default for values in (null);
---
CreateStmt@0..76
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..29
    Ident@13..29 "rlp_default_null"
  Whitespace@29..30 " "
  Partition@30..39 "partition"
  Whitespace@39..40 " "
  Of@40..42 "of"
  Whitespace@42..43 " "
  RangeVar@43..54
    Ident@43..54 "rlp_default"
  Whitespace@54..55 " "
  For@55..58 "for"
  Whitespace@58..59 " "
  Values@59..65 "values"
  Whitespace@65..66 " "
  PartitionBoundSpec@66..74
    InP@66..68 "in"
    Whitespace@68..69 " "
    Ascii40@69..70 "("
    AConst@70..74
      NullP@70..74 "null"
  Ascii41@74..75 ")"
  Ascii59@75..76 ";"

