crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@33.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table rlp1 partition of rlp for values from (minvalue) to (1);
---
CreateStmt@0..69
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..17
    Ident@13..17 "rlp1"
  Whitespace@17..18 " "
  Partition@18..27 "partition"
  Whitespace@27..28 " "
  Of@28..30 "of"
  Whitespace@30..31 " "
  RangeVar@31..34
    Ident@31..34 "rlp"
  Whitespace@34..35 " "
  For@35..38 "for"
  Whitespace@38..39 " "
  Values@39..45 "values"
  Whitespace@45..46 " "
  PartitionBoundSpec@46..67
    From@46..50 "from"
    Whitespace@50..51 " "
    Ascii40@51..52 "("
    ColumnRef@52..60
      Minvalue@52..60 "minvalue"
    Ascii41@60..61 ")"
    Whitespace@61..62 " "
    To@62..64 "to"
    Whitespace@64..65 " "
    Ascii40@65..66 "("
    AConst@66..67
      Iconst@66..67 "1"
  Ascii41@67..68 ")"
  Ascii59@68..69 ";"

