crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@349.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into ab values (1, 1), (1, 2), (1, 3), (2, 1);"
---
InsertStmt@0..53
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..14
    Ident@12..14 "ab"
  Whitespace@14..15 " "
  SelectStmt@15..51
    Values@15..21 "values"
    Whitespace@21..22 " "
    Ascii40@22..23 "("
    List@23..27
      AConst@23..24
        Iconst@23..24 "1"
      Ascii44@24..25 ","
      Whitespace@25..26 " "
      AConst@26..27
        Iconst@26..27 "1"
    Ascii41@27..28 ")"
    Ascii44@28..29 ","
    Whitespace@29..30 " "
    Ascii40@30..31 "("
    List@31..35
      AConst@31..32
        Iconst@31..32 "1"
      Ascii44@32..33 ","
      Whitespace@33..34 " "
      AConst@34..35
        Iconst@34..35 "2"
    Ascii41@35..36 ")"
    Ascii44@36..37 ","
    Whitespace@37..38 " "
    Ascii40@38..39 "("
    List@39..43
      AConst@39..40
        Iconst@39..40 "1"
      Ascii44@40..41 ","
      Whitespace@41..42 " "
      AConst@42..43
        Iconst@42..43 "3"
    Ascii41@43..44 ")"
    Ascii44@44..45 ","
    Whitespace@45..46 " "
    Ascii40@46..47 "("
    List@47..51
      AConst@47..48
        Iconst@47..48 "2"
      Ascii44@48..49 ","
      Whitespace@49..50 " "
      AConst@50..51
        Iconst@50..51 "1"
  Ascii41@51..52 ")"
  Ascii59@52..53 ";"

