crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@35.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table rlp3 (b varchar, a int) partition by list (b varchar_ops);"
---
CreateStmt@0..71
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..17
    Ident@13..17 "rlp3"
  Whitespace@17..18 " "
  Ascii40@18..19 "("
  ColumnDef@19..28
    Ident@19..20 "b"
    Whitespace@20..21 " "
    TypeName@21..28
      Varchar@21..28 "varchar"
  Ascii44@28..29 ","
  Whitespace@29..30 " "
  ColumnDef@30..35
    Ident@30..31 "a"
    Whitespace@31..32 " "
    TypeName@32..35
      IntP@32..35 "int"
  Ascii41@35..36 ")"
  Whitespace@36..37 " "
  PartitionSpec@37..69
    Partition@37..46 "partition"
    Whitespace@46..47 " "
    By@47..49 "by"
    Whitespace@49..50 " "
    Ident@50..54 "list"
    Whitespace@54..55 " "
    Ascii40@55..56 "("
    PartitionElem@56..69
      Ident@56..57 "b"
      Whitespace@57..58 " "
      Ident@58..69 "varchar_ops"
  Ascii41@69..70 ")"
  Ascii59@70..71 ";"

