crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@354.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into tbl1 values (501), (505);"
---
InsertStmt@0..37
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..16
    Ident@12..16 "tbl1"
  Whitespace@16..17 " "
  SelectStmt@17..35
    Values@17..23 "values"
    Whitespace@23..24 " "
    Ascii40@24..25 "("
    List@25..28
      AConst@25..28
        Iconst@25..28 "501"
    Ascii41@28..29 ")"
    Ascii44@29..30 ","
    Whitespace@30..31 " "
    Ascii40@31..32 "("
    List@32..35
      AConst@32..35
        Iconst@32..35 "505"
  Ascii41@35..36 ")"
  Ascii59@36..37 ";"

