crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@357.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table tprt_2 partition of tprt for values from (501) to (1001);
---
CreateStmt@0..70
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..19
    Ident@13..19 "tprt_2"
  Whitespace@19..20 " "
  Partition@20..29 "partition"
  Whitespace@29..30 " "
  Of@30..32 "of"
  Whitespace@32..33 " "
  RangeVar@33..37
    Ident@33..37 "tprt"
  Whitespace@37..38 " "
  For@38..41 "for"
  Whitespace@41..42 " "
  Values@42..48 "values"
  Whitespace@48..49 " "
  PartitionBoundSpec@49..68
    From@49..53 "from"
    Whitespace@53..54 " "
    Ascii40@54..55 "("
    AConst@55..58
      Iconst@55..58 "501"
    Ascii41@58..59 ")"
    Whitespace@59..60 " "
    To@60..62 "to"
    Whitespace@62..63 " "
    Ascii40@63..64 "("
    AConst@64..68
      Iconst@64..68 "1001"
  Ascii41@68..69 ")"
  Ascii59@69..70 ";"

